# music-vis

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/musicvis/: __main__.py  audio_analyser.py  constants.py  particle.py  visualiser_renderer.py
