[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "music-vis"
version = "0.1.0"
description = "A command line tool for generating audio visualizations."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Joe Heffer", email = "jheffer@gmail.com"}
]
dependencies = [
    "numpy>=1.0,<3.0",
    "librosa>=0.10,<1.0",
    "moviepy>=1.0,<2.0",
    "opencv-python>=4.0,<5.0",
    "soundfile>=0.12,<1.0"
]

[project.scripts]
# This creates a command 'audio-viz' that calls the main function
musicvis = "musicvis.__main__:main"
